# hsco_old

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  hsco.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/: Hsco.hs
