cabal-version:       2.4
name:                hsco
version:             0.0.0.0
synopsis:            The very least comprehensive personal haskell tool
description:         The very least comprehensive personal haskell tool
homepage:            https://github.com/Syllina/hsco
bug-reports:         https://github.com/Syllina/hsco/issues
license:             MIT
license-file:        LICENSE
author:              Syllinxia
maintainer:          Syllinxia <syllinxia@gmail.com>
copyright:           2023 Syllinxia
category:            mit, program
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/Syllina/hsco.git
common common-options
  build-depends:       base ^>= 4.13.0.0
                     , relude
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Hsco
executable hsco
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       hsco
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
test-suite hsco-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       hsco
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
benchmark hsco-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , hsco
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N